force-app/main/default/objects/Work_Requested__c/Work_Requested__c.object-meta.xml
<CustomObject>
    <label>Work Requested</label>
    <nameField>
        <displayFormat>WR-{000}</displayFormat>
        <label>Work Requested Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Requested</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>