force-app/main/default/objects/Work_Requested__c/fields/WorkRequest__c.field-meta.xml
<CustomField>
    <fullName>WorkRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Request</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Work_Order__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Work Request</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Work_Order__c</referenceTo>
    <relationshipLabel>Work Requested</relationshipLabel>
    <relationshipName>Work_Requested</relationshipName>
    <type>Lookup</type>
</CustomField>