force-app/main/default/objects/Work_Requested__c/fields/WorkRequested__c.field-meta.xml
<CustomField>
    <fullName>WorkRequested__c</fullName>
    <label>Work Requested</label>
    <length>255</length>
    <type>Text</type>
</CustomField>